# pixel-ui

./: Cargo.toml
examples/button/: Cargo.toml
examples/button/src/: main.rs
src/: app.rs  color.rs  component.rs  draw.rs  element.rs  event.rs  lib.rs  react.rs  signal.rs  util.rs  window.rs
src/element/: body.rs  button.rs  canvas.rs  icon.rs  rect.rs  span.rs  text.rs
